--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <div id="userlist">
       Hello world!, with HTML!
     </div>
+    <div>
+      Chatbox
+    </div>
     <!-- Exercise 02-1: Add two more divs for chat and inputbox -->
   </body>
 </html>
