--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div>
       Chatbox
     </div>
+    <div>
+      Input
+    </div>
     <!-- Exercise 02-1: Add two more divs for chat and inputbox -->
   </body>
 </html>
